<?xml version="1.0" encoding="utf-8"?>
<!-- Màn nâng cấp VIP: liệt kê quyền lợi và nút mua -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_screen"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbarInclude"
        layout="@layout/view_toolbar" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Phần đầu nền teal -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/teal_primary"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingTop="@dimen/space_lg"
                android:paddingBottom="@dimen/space_lg">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:letterSpacing="0.3"
                    android:text="@string/tools_group_vip"
                    android:textColor="@color/text_on_primary"
                    android:textSize="34sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvVipState"
                    style="@style/Text.HeaderLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_sm"
                    android:text="@string/vip_subtitle"
                    tools:text="Nâng cấp để gỡ toàn bộ quảng cáo" />

            </LinearLayout>

            <!-- Danh sách quyền lợi -->
            <LinearLayout
                android:id="@+id/benefitContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_sm"
                android:background="@color/bg_surface"
                android:orientation="vertical"
                android:paddingTop="@dimen/space_sm"
                android:paddingBottom="@dimen/space_sm" />

            <TextView
                android:id="@+id/tvNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/space_md"
                android:text="@string/vip_note"
                android:textColor="@color/text_secondary"
                android:textSize="@dimen/text_caption" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <TextView
        android:id="@+id/btnPurchase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button_primary"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:paddingTop="18dp"
        android:paddingBottom="18dp"
        android:text="@string/vip_purchase"
        android:textColor="@color/text_on_primary"
        android:textSize="@dimen/text_title"
        android:textStyle="bold" />

</LinearLayout>
